fix(forgot password): update responsive on mobile

--- a/static/scss/forgot-password.scss
+++ b/static/scss/forgot-password.scss
@@ -4,12 +4,24 @@
     text-decoration: none;
 }
 
+@mixin border-responsive ($width) {
+    body {
+        .container-fluid.login {
+            min-height: 100vh;
+            background-color: #FBFBFB;
+            .border-login {
+                width: $width;
+            }
+        }
+    }
+}
+
 body {
     .container-fluid {
         min-height: 100vh;
         background-color: #FBFBFB;
         .border-forgot-password {
-            width: 35%;
+            width: 26%;
             .border-img {
                 width: 100%;
                 margin: auto;
@@ -41,4 +53,16 @@ body {
             }
         }
     }
+}
+
+@media only screen and (max-width: 1400px) {
+    @include border-responsive(35%)
+}
+
+@media only screen and (max-width: 992px) {
+    @include border-responsive(50%)
+}
+
+@media only screen and (max-width: 576px) {
+    @include border-responsive(100%);
 }
